[package]
name = "char-device"
version = "0.16.1"
description = "Character Device I/O"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["io"]
categories = ["rust-patterns"]
repository = "https://github.com/sunfishcode/char-device"
exclude = ["/.github"]

[dependencies]
async-std = { version = "1.10.0", optional = true }
tokio = { version = "1.8.1", optional = true, features = ["fs"] }
io-extras = "0.17.0"
io-lifetimes = { version = "1.0.0", default-features = false }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.37.0", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
winx = "0.35.0"

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
tokio = { version = "1.6.0", features = ["io-util", "macros", "rt"] }

[features]
default = []
use_async_std = ["async-std", "io-extras/async-std"]
use_tokio = ["tokio", "io-extras/tokio", "io-lifetimes/tokio"]
