[package]
name = "char-device"
version = "0.16.4"
description = "Character Device I/O"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["io"]
categories = ["rust-patterns"]
repository = "https://github.com/sunfishcode/char-device"
exclude = ["/.github"]

[dependencies]
async-std = { version = "1.10.0", optional = true, features = ["io_safety"] }
tokio = { version = "1.8.1", optional = true, features = ["fs"] }
io-extras = "0.18.0"
io-lifetimes = { version = "2.0.0", default-features = false }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "1.0.0", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
winx = "0.36.0"

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
tokio = { version = "1.6.0", features = ["io-util", "macros", "rt"] }

[features]
default = []
use_async_std = ["async-std", "io-extras/async-std"]
use_tokio = ["tokio", "io-extras/tokio"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(bench)',
    'cfg(read_initializer)',
    'cfg(can_vector)',
    'cfg(clamp)',
    'cfg(extend_one)',
    'cfg(pattern)',
    'cfg(seek_stream_len)',
    'cfg(shrink_to)',
    'cfg(toowned_clone_into)',
    'cfg(try_reserve)',
    'cfg(unix_socket_peek)',
    'cfg(windows_by_handle)',
    'cfg(write_all_vectored)',
    'cfg(windows_file_type_ext)',
]
